# test123

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: nextjs.yml  submit-on-merge.yml
docs/: coinbase.md  webarena.md
libs/: lb_agentic_benchmarks-0.1.0-py3-none-any.whl
work/2025-11-25-newton-muon-c1c28595/problems/webarena/2025-11-25-newton-muon-c1c28595/: README.md  docker-compose.yaml  metadata.json
work/2025-11-25-newton-muon-c1c28595/problems/webarena/2025-11-25-newton-muon-c1c28595/html/: cart.html  cart.js  index.html  product-details.js  product.html  products.html  products.js  script.js  style.css
work/coinbase/: Adding New Content Areas.md  IMPLEMENTATION-PLAN.md  README.md  database-schema.md  next.config.ts  package-lock.json  package.json
work/coinbase/prisma/: schema.prisma  seed.js
work/coinbase/prisma/migrations/20251209190437_init/: migration.sql
work/coinbase/src/app/: fonts.css  layout.tsx  page.tsx
work/coinbase/src/app/assets/: hero-image.avif
work/coinbase/src/app/components/: Providers.tsx
work/coinbase/src/app/components/AssetSummary/: index.tsx
work/coinbase/src/app/components/BalanceCard/: index.tsx  styles.css
work/coinbase/src/app/components/CashSection/: index.tsx
work/coinbase/src/app/components/Content/: CoinbaseOneContent.tsx  ContentTemplate.tsx  index.tsx  (+5 more)
work/coinbase/src/app/context/: NotificationContext.tsx  UserContext.tsx
work/coinbase/src/app/home/: page.tsx
work/coinbase/src/app/signin/: page.tsx
work/coinbase/src/lib/: prisma.js  storage.js  storage.ts  tradeData.ts
(+9 files in other folders)
